Library Management: fix hibernate session sharing
 * fixed repository tests